# tauri-power-search

./: README.md  biome.json  bun.lockb  index.html  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  version-pr.yml
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_apps_table.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: clipboard.rs  db.rs  image.rs  mod.rs  pdf.rs  window.rs
src-tauri/src/utils/: apps.rs  mod.rs
src/assets/: extensions.json
src/components/extensions/: index.tsx  route.tsx
src/components/search/: index.ts  input.tsx
src/components/search/results/: index.tsx  result-card.tsx  result-details.tsx
src/components/ui/: link.tsx
src/constants/: index.ts  search.ts
src/extensions/: index.ts
src/extensions/calendar/: index.tsx  metadata.ts
src/extensions/calendar/hooks/: use-calendar.ts
src/extensions/extract-text/: index.tsx  metadata.ts  types.ts
src/extensions/extract-text/components/: results-grid.tsx  upload-button.tsx
src/extensions/extract-text/hooks/: use-file-processing.ts  use-text-change.ts
src/extensions/pdf-tools/: index.tsx  metadata.ts  types.ts
src/extensions/pdf-tools/components/: pdf-results.tsx  pdf-upload-button.tsx
src/extensions/pdf-tools/hooks/: use-pdf-processing.tsx
src/routes/: __root.tsx  extensions.$id.tsx  index.tsx
src/scripts/: extensions.ts
src/utils/: appIndex.ts  apps.ts  extensions.ts  search.ts  string.ts
