[package]
name = "power-search"
version = "0.1.0"
description = "A Tauri-based application for searching power sets of a given set of numbers, a Windows Powertoys and macOS Spotlight alternative."
authors = ["taroj1205"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_power_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard = "2"
window-vibrancy = "0.5.2"
active-win-pos-rs = "0.8"
base64 = "0.21"
image = "0.24"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
win_ocr = "0.1.3"
dirs = "5.0"
serde_json = "1.0"
pdf-extract = "0.8.2"
tempfile = "3.8"
lopdf = "0.31.0"
anyhow = "1.0"                                      # Error handling
uuid = { version = "1.3", features = ["v4"] }       # UUID generation
log = "0.4"
env_logger = "0.10"
once_cell = "1.20.3"
app-finder = "0.1.0"
fuse-rust = "0.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
